--- a/theme.html
+++ b/theme.html
@@ -62,6 +62,12 @@
     <div class="container">
         <div class="row">
             <div class="fourteen columns offset-by-two">
+                 <!-- Categories -->
+<li><a href="/tag/design" class="{{ set_active('/tag/design') }}">Design</a></li>
+<li><a href="/tag/web" class="{{ set_active('/tag/web') }}">Web</a></li>
+<li><a href="/tag/ios" class="{{ set_active('/tag/ios') }}">iOS</a></li>
+<li><a href="/tag/android" class="{{ set_active('/tag/android') }}">Android</a></li>
+<!-- END Categories --> 
                 {% if pages %}
                 <nav class="site-nav">
                     <ul class="nav-menu">
