--- a/theme.html
+++ b/theme.html
@@ -62,12 +62,29 @@
     <div class="container">
         <div class="row">
             <div class="fourteen columns offset-by-two">
-                 <!-- Categories -->
-<li><a href="/tag/design" class="{{ set_active('/tag/design') }}">Design</a></li>
-<li><a href="/tag/web" class="{{ set_active('/tag/web') }}">Web</a></li>
-<li><a href="/tag/ios" class="{{ set_active('/tag/ios') }}">iOS</a></li>
-<li><a href="/tag/android" class="{{ set_active('/tag/android') }}">Android</a></li>
-<!-- END Categories --> 
+                <!-- Categories -->
+                    <li><a href="/tag/design" class="{{ set_active('/tag/design') }}">Design</a></li>
+                    <li><a href="/tag/web" class="{{ set_active('/tag/web') }}">Web</a></li>
+                    <li><a href="/tag/ios" class="{{ set_active('/tag/ios') }}">iOS</a></li>
+                    <li><a href="/tag/android" class="{{ set_active('/tag/android') }}">Android</a></li>
+                <!-- END Categories --> 
+                {% if site.tags %}
+                <nav class="categories">
+                    <h4>Categories</h4>
+                        <ul>
+                            <li><a href="/tag/design" class="{{ set_active('/tag/design') }}">Design</a></li>
+                            <li><a href="/tag/web" class="{{ set_active('/tag/web') }}">Web</a></li>
+                            <li><a href="/tag/ios" class="{{ set_active('/tag/ios') }}">iOS</a></li>
+                            <li><a href="/tag/android" class="{{ set_active('/tag/android') }}">Android</a></li>
+                        </ul>
+                </nav>
+                    <h4>Tags</h4>
+                        <ul class="tags">
+                            {% for tag in site.tags %}
+                            <li><a href="/tag/{{ tag.name }}">#{{ tag.name }}</a></li>
+                            {% endfor %}
+                        </ul>
+                {% endif %} 
                 {% if pages %}
                 <nav class="site-nav">
                     <ul class="nav-menu">
