--- a/theme.html
+++ b/theme.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html prefix="og: http://ogp.me/ns#" xmlns:og="http://ogp.me/ns#">
-  <head>
+<head>
     <meta charset="utf-8">
     <title>
       {% if is_login %}Login
@@ -35,6 +35,32 @@
     })();
     </script>
     {% endif %}
+    <style>
+        .categories ul {
+        list-style: none;
+        margin: 0;
+        }
+        .categories li {
+        padding-bottom: 0.5em;
+        }
+        .categories a,
+        .categories a:visited {
+        display: block;
+        background: #2eb18d;
+        color: #FFF;
+        padding: 0.5em 0.75em;
+        border-radius: 3px;
+        }
+        .categories a:hover,
+        .categories a:focus,
+        .categories a.active {
+        text-decoration: none;
+        background: #d84c30;
+        }
+        .categories a:active {
+        background: #b33a22;
+        }
+    </style> 
   </head>
   <body>
     <div class="rainbow"></div>
