--- a/theme.html
+++ b/theme.html
@@ -89,10 +89,10 @@
         <div class="row">
             <div class="fourteen columns offset-by-two">
                 <!-- Categories -->
-                    <li><a href="/tag/design" class="{{ set_active('/tag/design') }}">Design</a></li>
+                   <!--  <li><a href="/tag/design" class="{{ set_active('/tag/design') }}">Design</a></li>
                     <li><a href="/tag/web" class="{{ set_active('/tag/web') }}">Web</a></li>
                     <li><a href="/tag/ios" class="{{ set_active('/tag/ios') }}">iOS</a></li>
-                    <li><a href="/tag/android" class="{{ set_active('/tag/android') }}">Android</a></li>
+                    <li><a href="/tag/android" class="{{ set_active('/tag/android') }}">Android</a></li> -->
                 <!-- END Categories --> 
                 {% if site.tags %}
                 <nav class="Class">
