--- a/theme.html
+++ b/theme.html
@@ -98,10 +98,10 @@
                 <nav class="Class">
                     <h4>Class</h4>
                         <ul>
-                            <li><a href="/tag/1-N" class="{{ set_active('/tag/1-N') }}">1-N</a></li>
-                            <li><a href="/tag/1-A" class="{{ set_active('/tag/1-A') }}">1-A</a></li>
-                            <li><a href="/tag/1-B" class="{{ set_active('/tag/1-B') }}">1-B</a></li>
-                            <li><a href="/tag/1-C" class="{{ set_active('/tag/1-C') }}">1-C</a></li>
+                            <li><a href="/tag/1-N" class="{{ set_active('/tag/1n') }}">1-N</a></li>
+                            <li><a href="/tag/1-A" class="{{ set_active('/tag/1a') }}">1-A</a></li>
+                            <li><a href="/tag/1-B" class="{{ set_active('/tag/1b') }}">1-B</a></li>
+                            <li><a href="/tag/1-C" class="{{ set_active('/tag/1c') }}">1-C</a></li>
                         </ul>
                 </nav>
                     <h4>Tags</h4>
