--- a/theme.html
+++ b/theme.html
@@ -89,13 +89,15 @@
         <div class="row">
             <div class="fourteen columns offset-by-two">
                 <!-- Categories -->
-                   <!--  <li><a href="/tag/design" class="{{ set_active('/tag/design') }}">Design</a></li>
-                    <li><a href="/tag/web" class="{{ set_active('/tag/web') }}">Web</a></li>
-                    <li><a href="/tag/ios" class="{{ set_active('/tag/ios') }}">iOS</a></li>
-                    <li><a href="/tag/android" class="{{ set_active('/tag/android') }}">Android</a></li> -->
+                     
+                   <li><a href="/tag/1n" class="{{ set_active('/tag/1n') }}">1-N</a></li>
+                            <li><a href="/tag/1a" class="{{ set_active('/tag/1a') }}">1-A</a></li>
+                            <li><a href="/tag/1b" class="{{ set_active('/tag/1b') }}">1-B</a></li>
+                            <li><a href="/tag/1c" class="{{ set_active('/tag/1c') }}">1-C</a></li>
+                
                 <!-- END Categories --> 
                 {% if site.tags %}
-                <nav class="Class">
+            <!--    <nav class="Class">
                     <h4>Class</h4>
                         <ul>
                             <li><a href="/tag/1n" class="{{ set_active('/tag/1n') }}">1-N</a></li>
@@ -103,7 +105,7 @@
                             <li><a href="/tag/1b" class="{{ set_active('/tag/1b') }}">1-B</a></li>
                             <li><a href="/tag/1c" class="{{ set_active('/tag/1c') }}">1-C</a></li>
                         </ul>
-                </nav>
+                </nav> -->
                     <h4>Tags</h4>
                         <ul class="tags">
                             {% for tag in site.tags %}
