--- a/theme.html
+++ b/theme.html
@@ -99,12 +99,12 @@
                 {% if site.tags %}
                 <nav class="Class">
                     <h4>Class</h4>
-                        <ul class="class-list">
-                            <li><a href="/tag/1n" class="{{ set_active('/tag/1n') }}">1-N</a></li>
-                            <li><a href="/tag/1a" class="{{ set_active('/tag/1a') }}">1-A</a></li>
-                            <li><a href="/tag/1b" class="{{ set_active('/tag/1b') }}">1-B</a></li>
-                            <li><a href="/tag/1c" class="{{ set_active('/tag/1c') }}">1-C</a></li>
-                        </ul>
+                    <ul class="class-list">
+                        <li><a href="/tag/1n" class="{{ set_active('/tag/1n') }}">1-N</a></li>
+                        <li><a href="/tag/1a" class="{{ set_active('/tag/1a') }}">1-A</a></li>
+                        <li><a href="/tag/1b" class="{{ set_active('/tag/1b') }}">1-B</a></li>
+                        <li><a href="/tag/1c" class="{{ set_active('/tag/1c') }}">1-C</a></li>
+                    </ul>
                 </nav> 
                     <h4>Tags</h4>
                         <ul class="tags">
@@ -112,7 +112,7 @@
                             <li><a href="/tag/{{ tag.name }}">{{ tag.name }}</a></li>
                             {% endfor %}
                         </ul>
-                {% endif %} 
+                    {% endif %} 
                 {% if pages %}
                 <nav class="site-nav">
                     <ul class="nav-menu">
@@ -124,7 +124,7 @@
                 </nav>
                 {% endif %}
                 <div class="site-content">
-                {% if is_home or is_tag %}
+                    {% if is_home or is_tag %}
                     {% if is_tag %}
                     <h2 class="tag-header">Showing all posts tagged {{ tag }}:</h2>
                     {% endif %}
@@ -313,6 +313,46 @@
                     </ul>
                     <p>All rights Reserved &copy; <a href="/">{{ site.name }}</a>. 
                         <!--Powered by <a href="http://postach.io/">Postach.io</a>--></p>
+                </div>
+                
+                <div class="sidebar">
+                    <div class="widget widget-about">
+                      <h2 class="widget-title"><a href="/">{{ site.author }}</a></h2>
+                      <div class="widget-content">
+                        <li>
+                            <a href="{{ site.atom_url }}" title="RSS" target="_blank">
+                              <i class="icon-rss"></i>
+                            </a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                    <div class="widget widget-latestposts">
+                      <h2 class="widget-title">Latest Posts</h2>
+                        <div class="widget-content popular-posts">
+                        {% if posts_recent %}
+                        <ul>
+                        {% for post in posts_recent %}
+                        {% if loop.index <= 5 and loop.index > 0 %}
+                          <li><a href="{{ post.permalink }}">{{ post.title }}</a></li>
+                        {% endif %}
+                        {% endfor %}
+                            </ul>
+                        {% endif %}
+                        </div>
+                    </div>
+                    <div class="widget widget-tagcloud">
+                      <h2 class="widget-title">Tags</h2>
+                      <div class="widget-content tag-cloud">
+                        {% if site.tags %}
+                        <ul>
+                          {% for tag in site.tags %}
+                          <li><a href="/tag/{{ tag.name }}">#{{ tag.name }}</a></li>
+                          {% endfor %}
+                        </ul>
+                        {% endif %}
+                      </div>
+                    </div>
                 </div>
             </div>
         </div>
