--- a/theme.html
+++ b/theme.html
@@ -96,7 +96,7 @@
                             <li><a href="/tag/1c" class="{{ set_active('/tag/1c') }}">1-C</a></li>
                 -->
                 <!-- END Categories --> 
-                {% if site.tags %}
+                <!-- {% if site.tags %}
                 <nav class="Class">
                     <h4>Class</h4>
                     <ul class="class-list">
@@ -112,7 +112,7 @@
                             <li><a href="/tag/{{ tag.name }}">{{ tag.name }}</a></li>
                             {% endfor %}
                         </ul>
-                    {% endif %} 
+                    {% endif %}  -->
                 {% if pages %}
                 <nav class="site-nav">
                     <ul class="nav-menu">
