--- a/theme.html
+++ b/theme.html
@@ -64,7 +64,6 @@
   </head>
   <body>
     <div class="rainbow"></div>
-
     {% if is_login %}
 
       {{ login_form }}
@@ -315,7 +314,7 @@
                         <!--Powered by <a href="http://postach.io/">Postach.io</a>--></p>
                 </div>
                 
-                <div class="sidebar">
+                <!-- <div class="sidebar">
                     <div class="widget widget-latestposts">
                       <h2 class="widget-title">Latest Posts</h2>
                         <div class="widget-content popular-posts">
@@ -342,7 +341,7 @@
                         {% endif %}
                       </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
